derive/tests/snapshots/disallow_soft_delete_and_cascade/Member/get_all_members.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    ///Get all rows inside the `member` table.
    pub fn get_all_members<'a>(&'a self) -> impl Iterator<Item = Member> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        self.db().member().iter()
    }
}
