derive/tests/snapshots/disallow_soft_delete_and_cascade/Member/get_members_by_guild_id.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    ///Get a `Member` iterator that contains all rows in the `member` table whose value matches the value from the single-column btree index on the `guild_id` column.
    pub fn get_members_by_guild_id<'a>(
        &'a self,
        guild_id: impl Into<GuildId>,
    ) -> impl Iterator<Item = Member> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        self.db().member().guild_id().filter(guild_id.into().value())
    }
}
impl<T: crate::spacetimedsl::ReadContext> crate::spacetimedsl::ReadOnlyDSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    ///Get a `Member` iterator that contains all rows in the `member` table whose value matches the value from the single-column btree index on the `guild_id` column.
    pub fn get_members_by_guild_id<'a>(
        &'a self,
        guild_id: impl Into<GuildId>,
    ) -> impl Iterator<Item = Member> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        self.db().member().guild_id().filter(guild_id.into().value())
    }
}
