derive/tests/snapshots/disallow_soft_delete_and_cascade/Member/soft_delete_member_by_id.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    /**

Try to soft-delete a `Member` row in the `member` table whose value matches the value from the unique single-column btree index on the `id` column.

# Disallowed values

Fails with a *Disallowed Value Error* if a column holds what its `#[disallow]` forbids:

- `experience`: `0`, a decrease

# Cascade

Runs the `on_soft_delete` strategies which the foreign keys of these tables declare:

- the `badge` table (`self`)*/
    pub fn soft_delete_member_by_id<'a>(
        &'a self,
        id: impl Into<MemberId> + Clone,
    ) -> Result<
        crate::spacetimedsl::delete::DeletionResult,
        crate::spacetimedsl::error::SpacetimeDSLError,
    > {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        use crate::spacetimedsl::itertools::Itertools;
        let id = id.clone().into().value();
        let row_to_delete = self.db().member().id().find(id);
        let row_to_delete = match row_to_delete {
            None => {
                return Err(crate::spacetimedsl::error::SpacetimeDSLError::NotFoundError {
                    table_name: "member".into(),
                    column_names_and_row_values: format!("{{ id : {} }}", & id).into(),
                });
            }
            Some(row_to_delete) => row_to_delete,
        };
        if row_to_delete.deleted {
            return Ok(crate::spacetimedsl::delete::DeletionResult {
                table_name: "member".into(),
                one_or_multiple: crate::spacetimedsl::error::OneOrMultiple::One,
                entries: vec![],
                error_from_hook: None,
            });
        }
        let mut deletion_result_entry = crate::spacetimedsl::delete::DeletionResultEntry {
            table_name: "member".into(),
            column_name: "id".into(),
            strategy: crate::spacetimedsl::delete::OnDeleteStrategy::SoftDelete,
            row_value: format!("{}", MemberId::new(row_to_delete.id.clone())).into(),
            child_entries: vec![],
        };
        match crate::spacetimedsl::internal::DSLInternals::execute_on_delete_strategies_of_referencing_tables_after_one_row_of_the_member_table_was_soft_deleted(
            self,
            crate::spacetimedsl::delete::OnDeleteStrategy::Error,
            &row_to_delete.id,
        ) {
            Err(failure) => {
                let mut child_entries = failure.entries;
                deletion_result_entry.child_entries.append(&mut child_entries);
                let error_from_hook = failure.error_from_hook;
                let error = crate::spacetimedsl::delete::DeletionResult {
                    table_name: "member".into(),
                    one_or_multiple: crate::spacetimedsl::error::OneOrMultiple::One,
                    entries: vec![deletion_result_entry],
                    error_from_hook: error_from_hook,
                };
                return Err(
                    crate::spacetimedsl::error::SpacetimeDSLError::ReferenceIntegrityViolation(
                        crate::spacetimedsl::error::ReferenceIntegrityViolationError::OnDelete(
                            error,
                        ),
                    ),
                );
            }
            Ok(mut child_entries) => {
                deletion_result_entry.child_entries.append(&mut child_entries);
            }
        };
        let old_row = &row_to_delete;
        let new_row = old_row.clone();
        use self::BeforeMemberSoftDeleteHook;
        let new_row = crate::spacetimedsl::DSLMethodHooks::before_member_soft_delete(
            self,
            old_row,
            new_row,
        )?;
        if new_row.experience == 0 {
            return Err(
                crate::spacetimedsl::error::SpacetimeDSLError::Error(
                    format!(
                        "Disallowed Value Error while trying to soft delete the row `{}` in the `member` table because `experience` is `0`, which `#[disallow(zero)]` forbids!",
                        format!("{{ id : {} }}", new_row.id)
                    ),
                ),
            );
        }
        if new_row.experience < old_row.experience {
            return Err(
                crate::spacetimedsl::error::SpacetimeDSLError::Error(
                    format!(
                        "Disallowed Value Error while trying to soft delete the row `{}` in the `member` table because `experience` would decrease from `{}` to `{}`, which `#[disallow(decreasing)]` forbids!",
                        format!("{{ id : {} }}", new_row.id), old_row.experience, new_row
                        .experience
                    ),
                ),
            );
        }
        let mut new_row = new_row;
        new_row.deleted = true;
        self.db().member().id().update(new_row);
        match crate::spacetimedsl::internal::DSLInternals::execute_on_delete_strategies_of_referencing_tables_after_one_row_of_the_member_table_was_soft_deleted(
            self,
            crate::spacetimedsl::delete::OnDeleteStrategy::SoftDelete,
            &row_to_delete.id,
        ) {
            Err(failure) => {
                let mut child_entries = failure.entries;
                deletion_result_entry.child_entries.append(&mut child_entries);
                let error_from_hook = failure.error_from_hook;
                let error = crate::spacetimedsl::delete::DeletionResult {
                    table_name: "member".into(),
                    one_or_multiple: crate::spacetimedsl::error::OneOrMultiple::One,
                    entries: vec![deletion_result_entry],
                    error_from_hook: error_from_hook,
                };
                return Err(
                    crate::spacetimedsl::error::SpacetimeDSLError::Error(
                        format!(
                            "Soft Delete One Error: An error occurred after changing the database state! If the reducer running this doesn't return an error, the state changes are persisted and you have problems now! Here is the deletion result: {error}"
                        ),
                    ),
                );
            }
            Ok(mut child_entries) => {
                deletion_result_entry.child_entries.append(&mut child_entries);
            }
        };
        match crate::spacetimedsl::internal::DSLInternals::execute_on_delete_strategies_of_referencing_tables_after_one_row_of_the_member_table_was_soft_deleted(
            self,
            crate::spacetimedsl::delete::OnDeleteStrategy::Ignore,
            &row_to_delete.id,
        ) {
            Err(failure) => {
                let mut child_entries = failure.entries;
                deletion_result_entry.child_entries.append(&mut child_entries);
                let error_from_hook = failure.error_from_hook;
                let error = crate::spacetimedsl::delete::DeletionResult {
                    table_name: "member".into(),
                    one_or_multiple: crate::spacetimedsl::error::OneOrMultiple::One,
                    entries: vec![deletion_result_entry],
                    error_from_hook: error_from_hook,
                };
                return Err(
                    crate::spacetimedsl::error::SpacetimeDSLError::Error(
                        format!(
                            "Soft Delete One Error: An error occurred after changing the database state! If the reducer running this doesn't return an error, the state changes are persisted and you have problems now! Here is the deletion result: {error}"
                        ),
                    ),
                );
            }
            Ok(mut child_entries) => {
                deletion_result_entry.child_entries.append(&mut child_entries);
            }
        };
        return Ok(crate::spacetimedsl::delete::DeletionResult {
            table_name: "member".into(),
            one_or_multiple: crate::spacetimedsl::error::OneOrMultiple::One,
            entries: vec![deletion_result_entry],
            error_from_hook: None,
        });
    }
}
